# ghcr_delete_old_images

./: Cargo.toml  Taskfile.yaml
.github/workflows/: delete_old_images.yml
src/: main.rs
